fix: resolve 92 compilation errors for compileSdk 34
Root causes and fixes:
1. CommandDispatcher: make extractString/extractInt/extractBoolean/extractObject/unescapeJson public (was package-private, inaccessible from apis.* sub-packages)
2. WifiConfiguration removed from SDK 30+: replace all direct references with reflection (Class.forName) in WifiConnectAPI, WifiHotspotAPI, WifiNetworksAPI
3. OnStartTetheringCallback hidden API: replaced with startLocalOnlyHotspot (API 26+) and ConnectivityManager reflection
4. WifiDirectAPI: remove WPS_PBC constant (doesn't exist on WifiP2pConfig)
5. WifiConnectAPI: setIsHiddenNetwork → setIsHiddenSsid (API 31+), fix getDhcpInfo static→instance call, fix DhcpInfo import
6. WifiNetworksAPI: CHANNEL_WIDTH_80PLUS_MHZ → CHANNEL_WIDTH_80_PLUS_MHZ, keyMgmt via reflection
7. WifiHotspotAPI: CONNECTIVITY_CLASS → CONNECTIVITY_SERVICE, add missing List/DhcpInfo imports
8. Legacy paths (API <29) preserved via reflection for backward compatibility with minSdk 26