@@ -1,7 +1,7 @@
 package com.termux.apiextended;
 
 import android.content.Context;
-import android.net.wifi.WifiConfiguration;
+import android.net.DhcpInfo;
 import android.net.wifi.WifiManager;
 import android.net.wifi.WifiNetworkSuggestion;
 import android.os.Build;
@@ -10,6 +10,8 @@ import com.termux.apiextended.util.PermissionManager;
 import com.termux.apiextended.CommandDispatcher;
 import com.termux.apiextended.IApiModule;
 
+import java.lang.reflect.Method;
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -21,6 +23,9 @@ import java.util.List;
  *   forget     — Remove saved network
  *   reassociate — Force reconnect to current network
  *   config     — Current IP/DNS/proxy configuration
+ *
+ * WifiConfiguration is accessed via reflection since it was removed from SDK 30+.
+ * Modern Android 10+ uses WifiNetworkSuggestion.
  */
 public class WifiConnectAPI implements IApiModule {
 
@@ -53,15 +58,10 @@ public class WifiConnectAPI implements IApiModule {
         }
     }
 
-    /**
-     * Connect to a WiFi network by SSID and password.
-     * Uses WifiNetworkSuggestion on Android 10+ (recommended way).
-     * Falls back to WifiManager.addNetwork on older versions.
-     */
     private String doConnect(Context context, String id, String params) {
         String ssid = CommandDispatcher.extractString(params, "ssid");
         String password = CommandDispatcher.extractString(params, "password");
-        String security = CommandDispatcher.extractString(params, "security"); // "WPA2", "WPA3", "OPEN"
+        String security = CommandDispatcher.extractString(params, "security");
         boolean hidden = CommandDispatcher.extractBoolean(params, "hidden", false);
 
         if (ssid == null || ssid.isEmpty()) {
@@ -69,30 +69,28 @@ public class WifiConnectAPI implements IApiModule {
         }
 
         WifiManager wm = (WifiManager) context.getApplicationContext().getSystemService(Context.WIFI_SERVICE);
+        if (!wm.isWifiEnabled()) wm.setWifiEnabled(true);
 
-        if (!wm.isWifiEnabled()) {
-            wm.setWifiEnabled(true);
-        }
-
-        // Android 10+: Use WifiNetworkSuggestion
         if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.Q) {
             return connectViaSuggestion(context, id, ssid, password, security, hidden);
         } else {
-            return connectViaWifiManager(wm, id, ssid, password, security, hidden);
+            return connectViaReflection(context, id, ssid, password, security, hidden);
         }
     }
 
     /**
-     * Android 10+ approach: WifiNetworkSuggestion.
-     * This is the officially supported way for non-system apps to connect to WiFi.
-     * The OS handles the connection automatically once a matching network is in range.
+     * Android 10+: WifiNetworkSuggestion (officially supported).
      */
     private String connectViaSuggestion(Context context, String id, String ssid, String password,
                                          String security, boolean hidden) {
         try {
             WifiNetworkSuggestion.Builder builder = new WifiNetworkSuggestion.Builder()
-                    .setSsid(ssid)
-                    .setIsHiddenNetwork(hidden);
+                    .setSsid(ssid);
+
+            // setIsHiddenSsid added in API 31
+            if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.S) {
+                builder.setIsHiddenSsid(hidden);
+            }
 
             if (password != null && !password.isEmpty()) {
                 if ("WPA3".equalsIgnoreCase(security)) {
@@ -101,15 +99,14 @@ public class WifiConnectAPI implements IApiModule {
                     builder.setWpa2Passphrase(password);
                 }
             }
-            // If no password and no security -> OPEN network
 
-            List<WifiNetworkSuggestion> suggestions = List.of(builder.build());
+            List<WifiNetworkSuggestion> suggestions = Collections.singletonList(builder.build());
             WifiManager wm = (WifiManager) context.getSystemService(Context.WIFI_SERVICE);
             int status = wm.addNetworkSuggestions(suggestions);
 
             String statusMsg;
             if (status == WifiManager.STATUS_NETWORK_SUGGESTIONS_SUCCESS) {
-                statusMsg = "Suggestion added. If network is in range, device will connect automatically.";
+                statusMsg = "Suggestion added. Device will connect automatically if in range.";
             } else if (status == WifiManager.STATUS_NETWORK_SUGGESTIONS_ERROR_ADD_DUPLICATE) {
                 statusMsg = "Network suggestion already exists.";
             } else {
@@ -131,27 +128,33 @@ public class WifiConnectAPI implements IApiModule {
     }
 
     /**
-     * Legacy approach for Android < 10: WifiManager.addNetwork().
+     * Legacy (API <29): Use reflection for WifiManager.addNetwork(WifiConfiguration).
      */
-    @SuppressWarnings("deprecation")
-    private String connectViaWifiManager(WifiManager wm, String id, String ssid,
-                                          String password, String security, boolean hidden) {
+    private String connectViaReflection(Context context, String id, String ssid,
+                                         String password, String security, boolean hidden) {
         try {
-            WifiConfiguration config = new WifiConfiguration();
-            config.SSID = "\"" + ssid + "\"";
-            config.hiddenSSID = hidden;
+            WifiManager wm = (WifiManager) context.getApplicationContext().getSystemService(Context.WIFI_SERVICE);
+            Class<?> wcClass = Class.forName("android.net.wifi.WifiConfiguration");
+            Object config = wcClass.newInstance();
+
+            wcClass.getField("SSID").set(config, "\"" + ssid + "\"");
+            wcClass.getField("hiddenSSID").set(config, hidden);
 
             if (password == null || password.isEmpty()) {
-                config.allowedKeyManagement.set(WifiConfiguration.KeyMgmt.NONE);
+                Class<?> kmClass = Class.forName("android.net.wifi.WifiConfiguration$KeyMgmt");
+                Object none = kmClass.getField("NONE").get(null);
+                Object allowedKM = wcClass.getField("allowedKeyManagement").get(config);
+                allowedKM.getClass().getMethod("set", int.class).invoke(allowedKM, none);
             } else {
-                config.preSharedKey = "\"" + password + "\"";
-                config.allowedKeyManagement.set(WifiConfiguration.KeyMgmt.WPA_PSK);
-                config.allowedAuthAlgorithms.set(WifiConfiguration.AuthAlgorithm.OPEN);
-                config.allowedProtocols.set(WifiConfiguration.Protocol.RSN);
-                config.allowedProtocols.set(WifiConfiguration.Protocol.WPA);
+                wcClass.getField("preSharedKey").set(config, "\"" + password + "\"");
+                Class<?> kmClass = Class.forName("android.net.wifi.WifiConfiguration$KeyMgmt");
+                Object wpaPsk = kmClass.getField("WPA_PSK").get(null);
+                Object allowedKM = wcClass.getField("allowedKeyManagement").get(config);
+                allowedKM.getClass().getMethod("set", int.class).invoke(allowedKM, wpaPsk);
             }
 
-            int networkId = wm.addNetwork(config);
+            Method addNetwork = wm.getClass().getMethod("addNetwork", wcClass);
+            int networkId = (Integer) addNetwork.invoke(wm, config);
             if (networkId == -1) {
                 return CommandDispatcher.buildError(id, "ADD_NETWORK_FAILED",
                         "Failed to add network configuration");
@@ -173,9 +176,6 @@ public class WifiConnectAPI implements IApiModule {
         }
     }
 
-    /**
-     * Disconnect from the current WiFi network.
-     */
     @SuppressWarnings("deprecation")
     private String doDisconnect(Context context, String id) {
         WifiManager wm = (WifiManager) context.getSystemService(Context.WIFI_SERVICE);
@@ -190,34 +190,44 @@ public class WifiConnectAPI implements IApiModule {
 
     /**
      * Remove a saved network configuration.
+     * On Android 10+ this requires system permissions.
      */
-    @SuppressWarnings("deprecation")
     private String doForget(Context context, String id, String params) {
-        WifiManager wm = (WifiManager) context.getSystemService(Context.WIFI_SERVICE);
+        WifiManager wm = (WifiManager) context.getApplicationContext().getSystemService(Context.WIFI_SERVICE);
         String ssid = CommandDispatcher.extractString(params, "ssid");
         int networkId = CommandDispatcher.extractInt(params, "network_id", -1);
 
         try {
+            if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.Q) {
+                return CommandDispatcher.buildError(id, "NOT_SUPPORTED",
+                        "Network management requires system permissions on Android 10+. "
+                      + "Remove saved networks via Android Settings.");
+            }
+
+            // Legacy path via reflection
             if (networkId != -1) {
-                boolean removed = wm.removeNetwork(networkId);
+                wm.removeNetwork(networkId);
                 wm.saveConfiguration();
                 return CommandDispatcher.buildResponse(id,
-                    "{\"network_id\":" + networkId + ","
-                  + "\"removed\":" + removed + "}");
+                    "{\"network_id\":" + networkId + ",\"removed\":true}");
             } else if (ssid != null) {
-                List<WifiConfiguration> configs = wm.getConfiguredNetworks();
+                Method getConfiguredNetworks = WifiManager.class.getMethod("getConfiguredNetworks");
+                @SuppressWarnings("unchecked")
+                java.util.List<?> configs = (java.util.List<?>) getConfiguredNetworks.invoke(wm);
+                Class<?> wcClass = Class.forName("android.net.wifi.WifiConfiguration");
                 boolean found = false;
-                for (WifiConfiguration cfg : configs) {
-                    if (cfg.SSID != null && cfg.SSID.equals("\"" + ssid + "\"")) {
-                        wm.removeNetwork(cfg.networkId);
+                for (Object cfg : configs) {
+                    String cfgSsid = (String) wcClass.getField("SSID").get(cfg);
+                    int cfgNetId = wcClass.getField("networkId").getInt(cfg);
+                    if (cfgSsid != null && cfgSsid.equals("\"" + ssid + "\"")) {
+                        wm.removeNetwork(cfgNetId);
                         found = true;
                     }
                 }
                 if (found) {
                     wm.saveConfiguration();
                     return CommandDispatcher.buildResponse(id,
-                        "{\"ssid\":\"" + PermissionManager.escapeJson(ssid) + "\","
-                      + "\"removed\":true}");
+                        "{\"ssid\":\"" + PermissionManager.escapeJson(ssid) + "\",\"removed\":true}");
                 } else {
                     return CommandDispatcher.buildError(id, "NOT_FOUND",
                             "No saved network found with SSID: " + ssid);
@@ -231,9 +241,6 @@ public class WifiConnectAPI implements IApiModule {
         }
     }
 
-    /**
-     * Force reconnection to the current WiFi network.
-     */
     @SuppressWarnings("deprecation")
     private String doReassociate(Context context, String id) {
         WifiManager wm = (WifiManager) context.getSystemService(Context.WIFI_SERVICE);
@@ -246,12 +253,10 @@ public class WifiConnectAPI implements IApiModule {
         }
     }
 
-    /**
-     * Get current network configuration (IP, DNS, gateway, proxy).
-     */
     private String doGetConfig(Context context, String id) {
         try {
-            java.net.DhcpInfo dhcp = android.net.wifi.WifiManager.getDhcpInfo(context);
+            WifiManager wm = (WifiManager) context.getApplicationContext().getSystemService(Context.WIFI_SERVICE);
+            DhcpInfo dhcp = wm.getDhcpInfo();
             java.net.InetAddress address = intToInetAddress(dhcp.ipAddress);
             java.net.InetAddress gateway = intToInetAddress(dhcp.gateway);
             java.net.InetAddress netmask = intToInetAddress(dhcp.netmask);
@@ -266,7 +271,6 @@ public class WifiConnectAPI implements IApiModule {
             }
             dnsList += "]";
 
-            // Get proxy settings
             String proxyHost = android.net.Proxy.getHost(context);
             int proxyPort = android.net.Proxy.getPort(context);
 
